# autd3-server

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  NOTICE  README.md  ThirdPartyNotice.txt  build.py  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js
.github/: dependabot.yml
.github/actions/setup-build/: action.yml
.github/workflows/: build.yml  release.yml
SOEMAUTDServer/: Cargo.toml  README.md  ThirdPartyNotice.txt
SOEMAUTDServer/src/: main.rs
TwinCATAUTDServer/: LICENSE
TwinCATAUTDServer/TwinCATAUTDServer/: Program.cs  SetupTwinCAT.cs  SyncMode.cs
TwinCATAUTDServerLightweight/: Cargo.toml  README.md  ThirdPartyNotice.txt
TwinCATAUTDServerLightweight/src/: log_formatter.rs  main.rs
simulator/: .gitignore  Cargo.toml  README.md  ThirdPartyNotice.txt
simulator/assets/shaders/: base.frag  base.vert  circle.frag  circle.vert  pressure.comp  slice.frag  slice.vert
simulator/src/: context.rs  error.rs  field_compute_pipeline.rs  imgui_renderer.rs  lib.rs  main.rs  prelude.rs  renderer.rs  server.rs  simulator.rs  slice_viewer.rs  sound_sources.rs  surface.rs  trans_viewer.rs  update_flag.rs  viewer_settings.rs
simulator/src/common/: camera_helper.rs  color.rs  color_map.rs  coloring_method.rs  log_formatter.rs  mod.rs  transform.rs
simulator/src/device_viewer/: mod.rs  viewer.rs
simulator/src/emulator/: mod.rs  transducers.rs
simulator/src/imgui_wgpu/: mod.rs
simulator/src/patch/imgui_vulkano_renderer/: mod.rs
simulator/src/renderer/: egui_renderer.rs  mod.rs
simulator/src/renderer/imgui/: components.rs  mod.rs
simulator/src/renderer/slice/: mod.rs  shader.wgsl
simulator/src/renderer/slice_renderer/: mod.rs
simulator/src/renderer/transducer/: mod.rs
simulator/src/renderer/transducer_renderer/: mod.rs
simulator/src/server/: mod.rs
simulator/src/state/: mod.rs  transducers.rs
simulator/src/view/: mod.rs  slice.rs  transducers.rs
simulator/src/view/device/: mod.rs  model.rs  viewer.rs
simulator/src/view/imgui/: components.rs  mod.rs
src/: App.svelte  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  ThirdPartyNotice.txt  build.rs  imgui.ini  tauri.conf.json
src-tauri/TwinCATAUTDServer/: README.md
src-tauri/capabilities/: default.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  options.rs
src/lib/: LeftPanel.svelte  License.svelte  RightPanel.svelte
src/lib/UI/: SOEM.svelte  Simulator.svelte  TwinCAT.svelte  console_output.ts  options.ts
src/lib/UI/utils/: Button.svelte  CheckBox.svelte  Input.svelte  IpInput.svelte  NumberInput.svelte  Select.svelte  duration.ts
tools/license-checker/: .gitignore  Cargo.toml  license-file.toml  workaround.toml
tools/license-checker/licenses/: Apache-2.0 WITH LLVM-exception
tools/license-checker/src/: diff.rs  main.rs  npm.rs  rs.rs
