[package]
name = "SOEMAUTDServer"
version = "23.1.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"
license = "MIT"

description = "AUTDServer"
repository = "https://github.com/shinolab/autd3-server"
readme = "../README.md"
keywords = ["autd"]

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
autd3-protobuf = { path = "../autd3/autd3-protobuf", features = ["lightweight", "async-trait"] }
autd3-link-soem = { path = "../autd3/autd3-link-soem", features = ["async-trait"] }
autd3-driver = { path = "../autd3/autd3-driver", features = ["async-trait"] }
anyhow = "1.0.72"
ctrlc = "3.3.0"
tonic = "0.11.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
chrono = "0.4.31"
tracing-core = "0.1.32"
