[package]
name = "TwinCATAUTDServerLightweight"
version = "27.0.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"
license = "MIT"

description = "AUTDServer"
repository = "https://github.com/shinolab/autd3-server"
readme = "README.md"
keywords = ["autd"]

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
autd3-protobuf = { version = "27.0.0", features = ["lightweight", "async-trait"] }
autd3-link-twincat = { version = "27.0.0", features = ["async-trait"] }
anyhow = "1.0.89"
ctrlc = "3.4.5"
tonic = "0.12.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
chrono = "0.4.31"
tracing-core = "0.1.32"
