[package]
name = "TwinCATAUTDServerLightweight"
version = "29.0.0-rc.8"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"
license = "MIT"

description = "AUTDServer"
repository = "https://github.com/shinolab/autd3-server"
readme = "README.md"
keywords = ["autd"]

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
autd3-protobuf = { version = "29.0.0-rc.8", features = ["lightweight", "async-trait"] }
autd3-link-twincat = { version = "29.0.0-rc.8", features = ["async-trait"] }
anyhow = "1.0.92"
ctrlc = "3.4.5"
tonic = "0.12.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
chrono = "0.4.31"
tracing-core = "0.1.32"
