[package]
name = "simulator"
version = "27.0.0-rc.4"
edition = "2021"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]

license = "MIT"
description = "AUTD Simulator"
repository = "https://github.com/shinolab/autd3-server"
keywords = ["autd"]

[dependencies]
autd3 = { version = "27.0.0-rc.4", features = ["async-trait"] }
autd3-driver = { version = "27.0.0-rc.4", features = ["async-trait"] }
autd3-firmware-emulator = { version = "27.0.0-rc.4", features = ["async-trait"] }
autd3-protobuf = { version = "27.0.0-rc.4", features = ["lightweight"] }
autd3-link-simulator = { version = "27.0.0-rc.4", features = ["async-trait"] }
bitflags = "2.3.1"
bytemuck = { version = "1.13.1", features = ["derive", "extern_crate_std", "min_const_generics"] }
camera_controllers = "0.34.0"
cgmath = "0.18.0"
clap = { version = "4.5.11", features = ["derive"] }
png = "0.17.8"
imgui = "0.12.0"
scarlet = "1.2.0"
serde_json = "1.0.121"
serde = { version = "1.0.204", features = ["derive"] }
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
winit = "0.28.6"
crossbeam-channel = "0.5.8"
image = "0.25.2"
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
futures-util = "0.3.28"
tonic = "0.12.1"
anyhow = "1.0.83"
chrono = "0.4.38"
gltf = "1.4.1"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
tracing-core = "0.1.31"
strum = { version = "0.26.2", features = ["derive"] }
directories = "5.0.1"

[features]
default = []
use_meter = ["autd3-driver/use_meter"]
left_handed = ["autd3-driver/left_handed"]
enable_debug = []
unity = ["use_meter", "left_handed"]
