[package]
name = "simulator"
version = "29.0.0-rc.8"
edition = "2021"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]

license = "MIT"
description = "AUTD Simulator"
repository = "https://github.com/shinolab/autd3-server"
keywords = ["autd"]

[dependencies]
anyhow = "1.0.92"
autd3-derive = "28.0.1"
autd3-driver = { version = "29.0.0-rc.8", features = ["async-trait"] }
autd3-firmware-emulator = { version = "29.0.0-rc.8", features = ["async-trait"] }
autd3-link-simulator = { version = "29.0.0-rc.8", features = ["async-trait"] }
autd3-protobuf = { version = "29.0.0-rc.8", features = ["async-trait", "lightweight"] }
bitflags = "2.6.0"
bytemuck = { version = "1.20.0", features = ["derive"] }
camera_controllers = "0.34.0"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
crossbeam-channel = "0.5.13"
futures-util = "0.3.31"
glam = { version = "0.29.1", features = ["bytemuck", "serde"] }
image = { version = "0.25.4", default-features = false, features = ["png"] }
imgui = "0.12.0"
imgui-winit-support = "0.12.0"
scarlet = "1.2.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
smallvec = "1.13.2"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.0"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.12.3"
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wgpu = { version = "23.0.0", features = ["serde"] }
winit = "0.29.15"

[features]
default = []
use_meter = ["autd3-driver/use_meter"]
left_handed = ["autd3-driver/left_handed"]
enable_debug = []
unity = ["use_meter", "left_handed"]
