[package]
name = "autd3-server"
version = "35.0.0"
description = "AUTD3 Server app"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2024"
repository = "https://github.com/shinolab/autd3-server"
keywords = ["autd"]

license = "MIT"
default-run = "autd3-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "time", "process"] }
tauri = { version = "2.6.2", features = [] }
autd3-link-soem = { version = "35.0.0", features = ["serde"] }
tauri-plugin-shell = "2.2.2"
tauri-plugin-os = "2.2.2"
showfile = "0.1.1"

[target.'cfg(windows)'.dependencies]
libloading = "0.8.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
