[package]
name = "license-checker"
version = "30.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
cargo-license = "0.6.1"
cargo_metadata = "0.18.1"
console = "0.15.10"
glob = "0.3.2"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
similar = { version = "2.7.0", features = ["text", "inline", "bytes"] }
