[package]
name = "license-checker"
version = "37.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
cargo-about = "0.8.2"
glob = "0.3.3"
itertools = "0.14.0"
krates = "0.20.0"
reqwest = "0.12.24"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
spdx = "0.12.0"
toml = "0.9.8"
